2007-05-09  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ia64/fpu/fraiseexcpt.c (feraiseexcept): Don't raise overflow
	exception in addition to inexact when asked to raise only FE_INEXACT.

	[BZ #3427]
	* sysdeps/s390/fpu/feholdexcpt.c (feholdexcept): Don't clear exceptions
	in *envp.

2007-05-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4403]
	* string/strfry.c (strfry): Make result more random.

2007-05-07  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/fpu/bits/mathinline.h (__isnanl): Don't define
	if __NO_LONG_DOUBLE_MATH.
	* sysdeps/unix/sysv/linux/alpha/ioperm.c: If BWX insns not
	available in the compiler, add .arch directive to the assembly.

2007-05-07  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/alpha/fpu/s_nearbyint.c (nearbyintl): Fix version on
	compat_symbol to GLIBC_2_1.
	* sysdeps/alpha/fpu/s_fmin.S (fminl): Likewise.
	* sysdeps/alpha/fpu/s_trunc.c (truncl): Likewise.
	* sysdeps/alpha/fpu/s_fmax.S (fmaxl): Likewise.
	* sysdeps/alpha/fpu/s_lrint.c (lrintl, llrintl): Likewise.
	* sysdeps/alpha/fpu/s_lround.c (lroundl, llroundl): Likewise.
	* sysdeps/alpha/fpu/s_round.c (roundl): Likewise.
	* sysdeps/alpha/fpu/s_isnan.c (isnanl): Provide compat_symbol in
	libc, not libm.
	(__isnanl): New compat_symbol.

2007-05-07  Ulrich Drepper  <drepper@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	* malloc/arena.c (heap_info): Add mprotect_size field, adjust pad.
	(new_heap): Initialize mprotect_size.
	(grow_heap): When growing, only mprotect from mprotect_size till
	new_size if mprotect_size is smaller.  When shrinking, use PROT_NONE
	MMAP for __libc_enable_secure only, otherwise use MADV_DONTNEED.

2007-04-30  Steven Munroe  <sjmunroe@us.ibm.com>
	    Peter Bergner  <bergner@us.ibm.com>

	* sysdeps/powerpc/bits/fenv.h: Declare __fe_mask_env extern.
	Define FE_NOMASK_ENV as FE_EANBLED_ENV.  Define FE_MASK_ENV.
	* sysdeps/powerpc/fpu/Makefile: Add fe_mask to libm-support.
	* sysdeps/powerpc/fpu/fe_mask.c: New file.